--- a/pom.xml
+++ b/pom.xml
@@ -10,28 +10,32 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>jetbrick-orm-parent</artifactId>
-    <version>2.1-SNAPSHOT</version>
+    <artifactId>shaft-parent</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
-    <name>${project.artifactId}</name>
-    <description>Object-relational mapping framework for jetbrick</description>
-    <url>http://subchen.github.io/jetbrick-orm/</url>
+    <name>shaft-parent</name>
+    <description>Java simple database operation framework</description>
+    <url>http://subchen.github.io/shaft/</url>
+
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
     <modules>
-        <module>jetbrick-orm</module>
-        <module>jetbrick-schema-app</module>
+        <module>shaft-dao</module>
     </modules>
 
     <scm>
-        <url>https://github.com/subchen/jetbrick-orm.git</url>
-        <connection>scm:git:https://github.com/subchen/jetbrick-orm.git</connection>
-        <developerConnection>scm:git:git://github.com/subchen/jetbrick-orm.git</developerConnection>
+        <url>https://github.com/subchen/shaft.git</url>
+        <connection>scm:git:https://github.com/subchen/shaft.git</connection>
+        <developerConnection>scm:git:git://github.com/subchen/shaft.git</developerConnection>
     </scm>
 
     <issueManagement>
         <system>github issue</system>
-        <url>https://github.com/subchen/jetbrick-orm/issues</url>
+        <url>https://github.com/subchen/shaft/issues</url>
     </issueManagement>
 
 </project>
