--- a/shaft-dao/pom.xml
+++ b/shaft-dao/pom.xml
@@ -5,24 +5,29 @@
 
     <parent>
         <groupId>com.github.subchen</groupId>
-        <artifactId>jetbrick-orm-parent</artifactId>
-        <version>2.1-SNAPSHOT</version>
+        <artifactId>shaft-parent</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>jetbrick-orm</artifactId>
+    <artifactId>shaft-dao</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jetbrick-commons</artifactId>
-            <version>2.0.2</version>
+            <version>2.1.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
