--- a/shaft-dao/pom.xml
+++ b/shaft-dao/pom.xml
@@ -25,9 +25,9 @@
             <version>${slf4j.version}</version>
         </dependency>
         <dependency>
-            <groupId>javax.annotation</groupId>
-            <artifactId>javax.annotation-api</artifactId>
-            <version>1.2</version>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.1</version>
             <optional>true</optional>
         </dependency>
         <dependency>
