--- a/shaft-ddl-sync/pom.xml
+++ b/shaft-ddl-sync/pom.xml
@@ -34,9 +34,10 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.github.subchen</groupId>
-            <artifactId>shaft-dao</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
